[project]
name = "top-tracks"
version = "1.0.0"
description = "Get the top tracks from a year as a collection of Spotify tracks"
dependencies = [
    "jaro-winkler",
    "python-dotenv",
    "rymscraper",
    "spotipy",
    "tqdm"
]

[project.scripts]
top-tracks = "top_tracks.rym:main"

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["top-tracks"]