[project]
name = "top-tracks"
version = "1.0.0"
description = "Turn a RYM chart into a Spotify playlist"
dependencies = [
    "flask",
    "flask-session",
    "jaro-winkler",
    "python-dotenv",
    "rymscraper",
    "spotipy",
    "tqdm"
]

[project.scripts]
top-tracks = "top_tracks.rym:main"

[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
    "top_tracks",
    "rymscraper"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["top_tracks"]